[package]
name = "cryptopandas_base"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "*"
oorandom = "*"
cashcontracts = { git = "https://github.com/slpdex/cashcontracts-rs" }
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
serde = { version = "1.0.97", features = ["derive"] }
