[package]
name = "cryptopandas_frontend"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
handlebars = "2.0.2"
serde_json = "1.0.40"
panda-base = { package = "cryptopandas_base", path = "../cryptopandas_base" }
