[package]
name = "cryptopandas_frontend"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cryptopandas_base = {"path"="../cryptopandas_base"}
#slpdexdb_db = {"path"="../slpdexdb_db"}
#slpdexdb_base = {"path"="../slpdexdb_base"}
#cashcontracts = { git = "https://github.com/slpdex/cashcontracts-rs" }
#hex = "0.4.0"
actix-web = "1.0.5"
handlebars = "2.0.2"
serde_json = "1.0.40"
panda-base = { package = "cryptopandas_base", path = "../cryptopandas_base" }
#secp256k1 = "0.15.5"
#hex-literal = "0.2.1"
#diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
